init docker and updated script

--- a/config/message-streaming/au-streaming.cfg
+++ b/config/message-streaming/au-streaming.cfg
@@ -1,6 +1,6 @@
 # Use file for message store
 store: file
-dir: "/Users/jakkritsittiwerapong/nat_store/"
+dir: "/nat_store"
 cluster_id: "api-cluster"
 file: {
     compact_enabled: true
